# PhoPro

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  publish-to-pypi.yml
PhoPro/: __init__.py
PhoPro/analysis/: FMM.py  __init__.py  artifact.py  comparison.py  peaks.py
PhoPro/core/: PhotometeryData.py  PhotometryData.py  PhotometryExperiment.py  PhotometryLoader.py  PhotometryPipeline.py  __init__.py
PhoPro/sim/: SimulatedLibrary.py  SimulatedPhotometry.py  __init__.py  kernels.py  layers.py
PhoPro/utils/: equations.py  graphing.py  io.py  operations.py  reference_fitting.py  window.py
docs/: docs.md  index.md  installation.md
docs/analysis/: FMM.md  artifact.md  comparison.md  peaks.md
docs/api/: PhotometryData.md  PhotometryExperiment.md  PhotometryLoader.md  SimulatedPhotometryGenerator.md
docs/core/: PhotometryData.md  PhotometryExperiment.md  PhotometryLoader.md  PhotometryPipeline.md
docs/sim/: SimulatedPhotometry.md  layers.md
docs/tutorials/: Analysis Modules.md  Basic_Usage.md  Batch Processing.md  Data Handling and Analysis.md  Introduction.md  Signal Processing.md  Simulating Photometry.md
envs/: basic_env.yml  fmm_env.yml  install_FLMM.R
installation/: index.html
pyFiberPhotometry/: __init__.py  core.py  sim.py  utils.py
pyFiberPhotometry/analysis/: FMM.py  artifact.py  comparison.py
pyFiberPhotometry/core/: PhotometeryData.py  (+4 more)
search/: search_index.json
stylesheets/: extra.css
tests/: run_tests.sh
tutorials/: Analysis Module.ipynb  Analysis Modules.ipynb  Basic_Usage.ipynb  Batch Processing.ipynb  Data Handling and Analysis.ipynb  Introduction.ipynb  Signal Processing.ipynb  Simulating Photometry.ipynb  Workshop_Solutions.ipynb  _push_nb_to_docs.sh
workshop/: exercises.ipynb  solutions.ipynb
(+50 files in other folders)
