[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PhoPro"
version = "0.5.0"
description = "Python package for processing, handling, and analyzing fiber photometry data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Griffin Golde", email = "ggolde@ufl.edu" }
]

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "anndata>=0.10",
  "h5py",
  "dask",
  "scipy",
  "statsmodels",
  "scikit-learn",
  "tdt",
  "pytest",
  "pyyaml",
  "plotnine",
]

[project.urls]
Homepage = "https://github.com/ggolde/PhoPro"
Source = "https://github.com/ggolde/PhoPro"
Issues = "https://github.com/ggolde/PhoPro/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]